[gd_scene load_steps=6 format=3 uid="uid://dkay0kiv2hrb1"]

[ext_resource type="Script" path="res://scripts/settingsmenu.gd" id="1_kcm73"]
[ext_resource type="FontFile" uid="uid://hdytp8muc17q" path="res://assets/font/Kenney Bold.ttf" id="2_uvpsm"]
[ext_resource type="StyleBox" uid="uid://bucef3k82gtbn" path="res://assets/style/normal_style_box_texture.tres" id="3_vave2"]
[ext_resource type="StyleBox" uid="uid://bhtm6pj85tg3p" path="res://assets/style/hover_style_box_texture.tres" id="4_v4qmp"]
[ext_resource type="StyleBox" uid="uid://dy2su535xmggd" path="res://assets/style/pressed_style_box_texture.tres" id="5_71eq7"]

[node name="Control" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kcm73")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0338533, 0.0338533, 0.0338533, 0.709804)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.0
offset_top = -100.0
offset_right = 202.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
pivot_offset = Vector2(202, 172)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Sound" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_uvpsm")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_vave2")
theme_override_styles/hover = ExtResource("4_v4qmp")
theme_override_styles/pressed = ExtResource("5_71eq7")
text = "SOUND"

[node name="Key Config" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_uvpsm")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_vave2")
theme_override_styles/hover = ExtResource("4_v4qmp")
theme_override_styles/pressed = ExtResource("5_71eq7")
text = "KEY CONFIG"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_uvpsm")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_vave2")
theme_override_styles/hover = ExtResource("4_v4qmp")
theme_override_styles/pressed = ExtResource("5_71eq7")
text = "BACK"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Sound" to="." method="_on_sound_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Key Config" to="." method="_on_key_config_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
